minor change to problem 3 wrt SE of std wording

--- a/HW0/AM207_HW0.ipynb
+++ b/HW0/AM207_HW0.ipynb
@@ -94,7 +94,7 @@
     "\n",
     "- Empirically estimate the standard deviation of the distribution $f_{{x}_2 | {x}_1}$, for ${x}_1 \\in [3.99, 4.01]$. Estimate, also the SE (standard error) of the estimate.\n",
     "\n",
-    "- How many digits in your mean estimate are significant? How many in your standard deviation estimate are significant? Explain why."
+    "- Given the SE, how many digits in your mean estimate are significant? Given the SE, How many in your standard deviation estimate are significant? Explain why."
    ]
   },
   {
