--- a/HW1/AM207_HW1.ipynb
+++ b/HW1/AM207_HW1.ipynb
@@ -4,7 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# AM207 Homework #0"
+    "# APMTH 207: Advanced Scientific Computing: \n",
+    "## Stochastic Methods for Data Analysis, Inference and Optimization\n",
+    "## Homework #1\n",
+    "**Harvard University**<br>\n",
+    "**Spring 2017**<br>\n",
+    "**Instructors: Rahul Dave**<br>\n",
+    "**Due Date: ** Thursday, Febrary 2nd, 2017 at 11:59pm\n",
+    "\n",
+    "**Instructions:**\n",
+    "\n",
+    "- Upload your final answers as well as your iPython notebook containing all work to Canvas.\n",
+    "\n",
+    "- Structure your notebook and your work to maximize readability."
    ]
   },
   {
@@ -72,10 +84,9 @@
    "metadata": {},
    "source": [
     "## Problem 3: Frequentist Stats\n",
+    "**Coding required**\n",
     "\n",
     "Read the data set contained in `Homework_0_Data.txt`. Each data point is a two-dimensional vector, $\\mathbf{x} = (x_1, x_2)$.\n",
-    "\n",
-    "**Coding required**\n",
     "\n",
     "### Part (A): Visualization and Interpretation\n",
     "\n",
@@ -94,17 +105,8 @@
     "\n",
     "- Empirically estimate the standard deviation of the distribution $f_{{x}_2 | {x}_1}$, for ${x}_1 \\in [3.99, 4.01]$. Estimate, also the SE (standard error) of the estimate.\n",
     "\n",
-    "- Given the SE, how many digits in your mean estimate are significant? Given the SE, How many in your standard deviation estimate are significant? Explain why."
+    "- Given the SE, How many in your standard deviation estimate are significant? Explain why."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
