--- a/HW2/AM207_HW2.ipynb
+++ b/HW2/AM207_HW2.ipynb
@@ -10,7 +10,7 @@
     "**Harvard University**<br>\n",
     "**Spring 2017**<br>\n",
     "**Instructors: Rahul Dave**<br>\n",
-    "**Due Date: ** Thursday, Febrary 9tj, 2017 at 11:59pm\n",
+    "**Due Date: ** Thursday, Febrary 9th, 2017 at 11:59pm\n",
     "\n",
     "**Instructions:**\n",
     "\n",
