final version HW2

--- a/HW1/AM207_HW1_Solutions.ipynb
+++ b/HW1/AM207_HW1_Solutions.ipynb
@@ -397,7 +397,7 @@
     "\n",
     "**Solutions:**\n",
     "\n",
-    "We can emprically estimate the mean of the distribution $f_{x_1}$ by taking the average of the $x_1$ values in our dataset; we can estimate the std of the distribution $f_{x_2 \\mid x_1}$, for $x_1 \\in [3.99, 4.01]$, by filter the data for points with $x_1 \\in [3.99, 4.01]$, then taking the std of the $x_2$ values of the filtered dataset. \n",
+    "We can emprically estimate the mean of the distribution $f_{x_1}$ by taking the average of the $x_1$ values in our dataset; we can estimate the std of the distribution $f_{x_2 \\mid x_1}$, for $x_1 \\in [3.99, 4.01]$, by filtering the data for points with $x_1 \\in [3.99, 4.01]$, then taking the std of the $x_2$ values of the filtered dataset. \n",
     "\n",
     "We note that since our estimate of these two stats rely on the sample of data we obtain from the underlying distribution, our estimates will vary from sample to sample. Thus, we would like to quantify how much our mean or std estimates can vary given different samples of data. One way to quantify the variation in our estimates is through computing the standard error of the estimate. The standard error is the standard deviation of the distribution of an estimate.\n",
     "\n",
