--- a/HW3/AM207_HW3.ipynb
+++ b/HW3/AM207_HW3.ipynb
@@ -25,11 +25,11 @@
    "source": [
     "## Problem 1: Optimization via Descent\n",
     "\n",
-    "Suppose you are building a pricing model for laying down telecom cables over a geographical region. Your model takes as input a pair of  coordinates, $(x, y)$, and contains two parameters, $\\lambda_1, \\lambda_2$. Given a coordinate, $(x, y)$, and model parameters, the net loss in revenue corresponding to the price model at location $(x, y)$ is described by\n",
+    "Suppose you are building a pricing model for laying down telecom cables over a geographical region. Your model takes as input a pair of  coordinates, $(x, y)$, and contains two parameters, $\\lambda_1, \\lambda_2$. Given a coordinate, $(x, y)$, and model parameters, the loss in revenue corresponding to the price model at location $(x, y)$ is described by\n",
     "$$\n",
     "L(x, y, \\lambda_1, \\lambda_2) = 0.00005\\lambda_2^2 y - 0.0001\\lambda_1^2 x -0.01\\lambda_1 x\\exp\\left\\{\\left(y^2 - x^2\\right)\\left(\\lambda_1^2 + \\lambda_2^2\\right)\\right\\}\n",
     "$$\n",
-    "Read the data contained in `HW3_data.csv`. This is a set of coordinates configured on the curve $y^2 - x^2 = -0.1$. Given the data, find parameters $\\lambda_1, \\lambda_2$ that minimize the loss function $L$.\n",
+    "Read the data contained in `HW3_data.csv`. This is a set of coordinates configured on the curve $y^2 - x^2 = -0.1$. Given the data, find parameters $\\lambda_1, \\lambda_2$ that minimize the net loss over the entire dataset.\n",
     "\n",
     "### Part A\n",
     "- Visually verify that for $\\lambda_1 = -2.15784, \\lambda_2 = 0$, the loss function $L$ is minimized for the given data.\n",
