--- a/HW2/AM207_HW2.ipynb
+++ b/HW2/AM207_HW2.ipynb
@@ -28,16 +28,16 @@
     "Let $X$ be a random variable with distribution described by the following pdf:\n",
     "$$\n",
     "f_X(x) = \\begin{cases}\n",
-    "\\frac{1}{6}(x-1), &1\\leq x\\leq 3\\\\\n",
-    "-\\frac{1}{6}(x-5), &3\\leq x\\leq 5\\\\\n",
-    "\\frac{1}{3}(x-5), &5\\leq x\\leq 7\\\\\n",
-    "-\\frac{1}{3}(x-9), &7\\leq x\\leq 9\\\\\n",
+    "\\frac{1}{12}(x-1), &1\\leq x\\leq 3\\\\\n",
+    "-\\frac{1}{12}(x-5), &3< x\\leq 5\\\\\n",
+    "\\frac{1}{6}(x-5), &5< x\\leq 7\\\\\n",
+    "-\\frac{1}{6}(x-9), &7< x\\leq 9\\\\\n",
     "0, &otherwise\n",
     "\\end{cases}\n",
     "$$\n",
     "Let $h$ be the following function of $X$:\n",
     "$$\n",
-    "h(X) = \\frac{1}{\\sqrt{2}\\pi}\\mathrm{exp}\\left\\{ -\\frac{1}{2}\\left( 1 - X^2\\right)\\right\\}\n",
+    "h(X) = \\frac{1}{3\\sqrt{2}\\pi}\\mathrm{exp}\\left\\{ -\\frac{1}{18}\\left( X - 5\\right)^2\\right\\}\n",
     "$$\n",
     "\n",
     "Compute $\\mathbb{E}[h(X)]$ via Monte Carlo simulation using the following sampling methods:\n",
@@ -54,13 +54,25 @@
     "\n",
     "### Part A\n",
     "\n",
-    "- Compute the variance of each estimate of $\\mathbb{E}[h(X)]$ obtained in Problem 1. Which sampling methods, proposal distributions resulted in lower variances? Are the results what you expected?\n",
+    "Compute the variance of each estimate of $\\mathbb{E}[h(X)]$ obtained in Problem 1. Based on the discussion on sampling methods in lecture, which sampling methods, proposal distributions is expected, in principle, to resulted in lower variances? How well do your results align with these expectations?\n",
     "\n",
-    "- What can be done to further reduce the variance of the estimate of $\\mathbb{E}[h(X)]$ resulting from each sampling method?\n",
+    "### Part B (Stratified Sampling)\n",
     "\n",
-    "### Part B\n",
+    "Often, a complex integral can be computed with more ease if one can break up the domain of the integral into pieces and if on each piece of the domain, the integral is simplified. \n",
     "\n",
-    "- [I want them to try strattified sampling and control variates]"
+    "- Find a natural way to divide the domain of $X$ and express $\\mathbb{E}[h(X)]$ as an appropriately weighted sum of integrals over the pieces of the domain of $X$. (This constitute the essentials of Stratified Sampling)\n",
+    "\n",
+    "- Estimate each integral in the summand using rejection sampling using a normal proposal distribution (with sensibly chosen parameters). From these, estimate $\\mathbb{E}[h(X)]$.\n",
+    "\n",
+    "- Compute the variance of your estimate of $\\mathbb{E}[h(X)]$. Compare with the variance of your previous estimate of $\\mathbb{E}[h(X)]$ (in Part A, using rejection sampling, a normal proposal distirbution over the entire domain of $X$).\n",
+    "\n",
+    "Read more about Stratified Sampling:\n",
+    "\n",
+    "1. [Variance Reduction Techniques Slides](http://www.sta.nus.edu.sg/~zhangjt/teaching/ST4231/lectures/chapter4.pdf)\n",
+    "\n",
+    "2. [Monte Carlo Methods](http://www.public.iastate.edu/~mervyn/stat580/Notes/s09mc.pdf)\n",
+    "\n",
+    "3. [Variance Reduction Techniques Chapter](http://sas.uwaterloo.ca/~dlmcleis/s906/chapt4.pdf)"
    ]
   }
  ],
