final final HW2

--- a/HW2/AM207_HW2.ipynb
+++ b/HW2/AM207_HW2.ipynb
@@ -58,9 +58,9 @@
     "\n",
     "### Part B (Stratified Sampling)\n",
     "\n",
-    "Often, a complex integral can be computed with more ease if one can break up the domain of the integral into pieces and if on each piece of the domain, the integral is simplified. \n",
+    "Often, a complex integral can be computed with more ease if one can break up the domain of the integral into pieces and if on each piece of the domain the integral is simplified. \n",
     "\n",
-    "- Find a natural way to divide the domain of $X$ and express $\\mathbb{E}[h(X)]$ as an appropriately weighted sum of integrals over the pieces of the domain of $X$. (This constitute the essentials of Stratified Sampling)\n",
+    "- Find a natural way to divide the domain of $X$ and express $\\mathbb{E}[h(X)]$ as an ***correctly*** weighted sum of integrals over the pieces of the domain of $X$. (This constitute the essentials of Stratified Sampling)\n",
     "\n",
     "- Estimate each integral in the summand using rejection sampling using a normal proposal distribution (with sensibly chosen parameters). From these, estimate $\\mathbb{E}[h(X)]$.\n",
     "\n",
@@ -74,6 +74,15 @@
     "\n",
     "3. [Variance Reduction Techniques Chapter](http://sas.uwaterloo.ca/~dlmcleis/s906/chapt4.pdf)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
