updating long HW1

--- a/HW3_long/Long_HW_1.ipynb
+++ b/HW3_long/Long_HW_1.ipynb
@@ -28,7 +28,7 @@
     "\n",
     "In supervised machine learning, a function that maps certain input data to a set of outputs is inferred from a labelled dataset called the training set, and the resulting learnt funtion is then used to make predictions on unseen new examples of the dataset (the test set).\n",
     "\n",
-    "The goal of this homework is to construct a classifier known as the single-hidden-layer Multi-Layer Perceptron (MLP), an artificial neural netwok. You are asked to train the classifier using mini-batch gradient descent, validate it, and then apply it to a test dataset to make predictions. We will use the *MNIST* dataset, which consists of 70,000 images of handwritten digits, each of which is 28x28 pixels. You can use the first 50,000 images as the training set, the next 10,000 images as the validation set, and the last 10,000 images as the test set.\n",
+    "The goal of this homework is to construct a classifier known as the single-hidden-layer Multi-Layer Perceptron (MLP), an artificial neural netwok. You are asked to train the classifier using mini-batch gradient descent, validate it, and then apply it to a test dataset to make predictions. We will use the [*MNIST* dataset](https://en.wikipedia.org/wiki/MNIST_database), which consists of 70,000 images of handwritten digits, each of which is 28x28 pixels. You can use the first 50,000 images as the training set, the next 10,000 images as the validation set, and the last 10,000 images as the test set.\n",
     "\n",
     "You will proceed in 2 steps (each step is a problem) to build the MLP. Please use Theano to program the classifiers.\n",
     "\n",
@@ -82,7 +82,15 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# To read the dataset\n",
+    "dataset='mnist.pkl.gz'\n",
+    "with gzip.open(dataset, 'rb') as f:\n",
+    "        try:\n",
+    "            train_set, valid_set, test_set = pickle.load(f, encoding='latin1')\n",
+    "        except:\n",
+    "            train_set, valid_set, test_set = pickle.load(f)"
+   ]
   }
  ],
  "metadata": {
