--- a/HW3/AM207_HW3.ipynb
+++ b/HW3/AM207_HW3.ipynb
@@ -4,12 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# APMTH 207: Advanced Scientific Computing: \n",
-    "## Stochastic Methods for Data Analysis, Inference and Optimization\n",
-    "## Homework #3\n",
-    "**Harvard University**<br>\n",
-    "**Spring 2017**<br>\n",
-    "**Instructors: Rahul Dave**<br>\n",
+    "# Homework 3\n",
+    "\n",
+    "\n",
+    "## APMTH 207:  Stochastic Methods for Data Analysis, Inference and Optimization\n",
+    "\n",
     "**Due Date: ** Thursday, Febrary 16th, 2017 at 11:59pm\n",
     "\n",
     "**Instructions:**\n",
@@ -62,7 +61,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
