--- a/HW1/AM207_HW1_Solutions.ipynb
+++ b/HW1/AM207_HW1_Solutions.ipynb
@@ -150,7 +150,7 @@
     "Since this function looks unwieldy to maximize, we'll instead work with the log likelihood. Recall that the log function is monotone increasing, parameters that maximizes the log likelihood are precisely the ones that maximizes the likelihood.\n",
     "\\begin{aligned}\n",
     "\\ell(\\lambda_0, \\lambda_1) = \\ln L(\\lambda_0, \\lambda_1) &= \\sum_{i=0}^3 \\ln(4) + 2\\ln (\\lambda_1)  + \\ln(x^{(i)}_{1}x^{(i)}_{2}) -\\lambda_0 \\left[\\left(x^{(i)}_{1}\\right)^2 + \\left(x^{(i)}_{2}\\right)^2\\right] \\\\\n",
-    "&= 3\\ln(4) + 6\\ln (\\lambda_1)  + \\sum_{i=0}^3\\ln(x^{(i)}_{1}x^{(i)}_{2}) - \\lambda_0 \\sum_{i=0}^3\\left[\\left(x^{(i)}_{1}\\right)^2 + \\left(x^{(i)}_{2}\\right)^2\\right]\n",
+    "&= 4\\ln(4) + 8\\ln (\\lambda_1)  + \\sum_{i=0}^3\\ln(x^{(i)}_{1}x^{(i)}_{2}) - \\lambda_0 \\sum_{i=0}^3\\left[\\left(x^{(i)}_{1}\\right)^2 + \\left(x^{(i)}_{2}\\right)^2\\right]\n",
     "\\end{aligned}\n",
     "Recall that global maxima, if they exist, of a differentiable function occurs either at the critical or stable points (where the gradient is zero) or at the boundaries (if they exist) of the domain of the function. Our first goal, then, is to find values of $\\lambda_0, \\lambda_1$ where the gradient $\\nabla\\ell$ is zero. If we proceeded to take partial derivatives of $\\ell$ with respect to $\\lambda_0$ and $\\lambda_1$, we would obtain a system of equations that is inconsistent. After a moment of thought, we realize that there is an important constraint on $\\lambda_0, \\lambda_1$ that we've neglected to incorporate. That is, $\\lambda_0, \\lambda_1$ must satify\n",
     "$$\n",
@@ -168,14 +168,14 @@
     "1 &=\\frac{\\lambda_1^2}{\\lambda_0^2}\n",
     "\\end{aligned}\n",
     "\n",
-    "Since we've assumed that $\\lambda_1, \\lambda_0 > 0$, the above implies that $\\lambda_1 = \\lambda_0$ and hence $$\\ell(\\lambda_0, \\lambda_1) = \\ell(\\lambda_0) = 3\\ln(4) + 6\\ln (\\lambda_0)  + \\sum_{i=0}^3\\ln(x^{(i)}_{1}x^{(i)}_{2}) - \\lambda_0 \\sum_{i=0}^3\\left[\\left(x^{(i)}_{1}\\right)^2 + \\left(x^{(i)}_{2}\\right)^2\\right].$$\n",
+    "Since we've assumed that $\\lambda_1, \\lambda_0 > 0$, the above implies that $\\lambda_1 = \\lambda_0$ and hence $$\\ell(\\lambda_0, \\lambda_1) = \\ell(\\lambda_0) = 4\\ln(4) + 8\\ln (\\lambda_0)  + \\sum_{i=0}^3\\ln(x^{(i)}_{1}x^{(i)}_{2}) - \\lambda_0 \\sum_{i=0}^3\\left[\\left(x^{(i)}_{1}\\right)^2 + \\left(x^{(i)}_{2}\\right)^2\\right].$$\n",
     "\n",
     "Now, the critical points of of $\\ell$ can be found by solving\n",
     "\\begin{aligned}\n",
-    "0 &= \\frac{d}{d\\lambda_0}\\ell(\\lambda_0) = \\frac{6}{\\lambda_0} - \\sum_{i=0}^3\\left[\\left(x^{(i)}_{1}\\right)^2 + \\left(x^{(i)}_{2}\\right)^2\\right]\\\\\n",
-    "\\lambda_0 &= \\frac{6}{\\sum_{i=0}^3\\left[\\left(x^{(i)}_{1}\\right)^2 + \\left(x^{(i)}_{2}\\right)^2\\right]} \\approx 0.037 \n",
+    "0 &= \\frac{d}{d\\lambda_0}\\ell(\\lambda_0) = \\frac{8}{\\lambda_0} - \\sum_{i=0}^3\\left[\\left(x^{(i)}_{1}\\right)^2 + \\left(x^{(i)}_{2}\\right)^2\\right]\\\\\n",
+    "\\lambda_0 &= \\frac{8}{\\sum_{i=0}^3\\left[\\left(x^{(i)}_{1}\\right)^2 + \\left(x^{(i)}_{2}\\right)^2\\right]} \\approx 0.0497 \n",
     "\\end{aligned}\n",
-    "Since the second derivative, $\\frac{d^2}{d\\lambda_0}\\ell(\\lambda_0) = - \\frac{6}{\\lambda_0^2}$, is negative on $\\mathbb{R}$, we know that $\\ell$ is concave down and hence $\\ell$ is maximized at its unique critical point.\n",
+    "Since the second derivative, $\\frac{d^2}{d\\lambda_0}\\ell(\\lambda_0) = - \\frac{8}{\\lambda_0^2}$, is negative on $\\mathbb{R}$, we know that $\\ell$ is concave down and hence $\\ell$ is maximized at its unique critical point.\n",
     "\n",
     "\n",
     "### Part B:\n",
@@ -453,9 +453,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -467,7 +467,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
