HW2 soln complete

--- a/HW2/AM207_HW2_Solutions.ipynb
+++ b/HW2/AM207_HW2_Solutions.ipynb
@@ -68,7 +68,7 @@
     "- importance sampling with both uniform proposal distribution and normal proposal distribution (with appropriately chosen parameters)\n",
     "\n",
     "### REVIEW OF SIMULATION AND SAMPLING\n",
-    "**(Feel free to skip if you're solid on the theoretical underpinning of these methods)**\n",
+    "**(If you're solid on the theoretical underpinning of these methods or are more interested in implementation, you might not find this helpful)**\n",
     "\n",
     "### 0. Review of Monte Carlo Simulation\n",
     "Let's define $Y = h(X)$. Since $X$ is a random variable, so too is $Y$. Thus, it make sense to compute its mean, that is, to compute \n",
@@ -97,6 +97,8 @@
     "\n",
     ">**An IF-YOU-CARE, SUPER TECHNICAL Note:** more precisely, the second statement should be \"the probability of $\\lim_{n\\to \\infty}\\bar{Y}_n = \\mathbb{E}[Y]$ is 1\" or \"$\\lim_{n\\to \\infty}\\bar{Y}_n = \\mathbb{E}[Y]$ almost surely\". Furthermore, the statement that \"$\\lim_{n\\to \\infty}\\bar{Y}_n = \\mathbb{E}[Y]$ almost surely\" is actually stronger than requiring $\\bar{Y}_n$ to be a  consistent estimator, the latter only requiring the probability of $|\\lim_{n\\to \\infty}\\bar{Y}_n -  \\mathbb{E}[Y]| \\geq \\epsilon$ to be zero for every $\\epsilon >0$. \n",
     "\n",
+    "The variance of the estimator $\\bar{Y}_n$ is equal to $\\frac{\\sigma^2}{n}$, where $\\sigma = \\mathrm{Var}[Y]$ (this is given by the Central Limit Theorem).\n",
+    "\n",
     "**CONCLUSION:** \n",
     "So, it appears that estimating $\\mathbb{E}[Y] = \\mathbb{E}[h(X)]$ is easy as long as we can sample from $f_X$. The problem is that, in practice, we often work with pdf's that are easy to evalutate but difficult to sample from. In our case, we can easily compute $f_X(x)$ when we are given a number $x \\in \\mathbb{R}$, but it's not clear how to generate values of $x$ from the distribution described by $f_X$. \n",
     "\n",
@@ -115,10 +117,74 @@
     "So if we uniformly sample values in the range of the CDF, [0, 1] and find the corresponding $X$ values for these samples (using the inverse function of the CDF), we obtain samples of $X$. \n",
     "\n",
     "### II. Rejection Sampling\n",
+    "The idea behind Rejection Sampling is to by-pass the problem of sampling from a difficult distribution $f_X$, by:\n",
+    "\n",
+    "1. approximating $f_X$ (this is called the target distribution) with a pdf $g$ (this is called the proposal distribution) that is easy to sample\n",
+    "2. sample from $g$ and reject the samples that are unlikely to be from $f_X$\n",
+    "\n",
+    "More precisely, we choose a proposal distribution $g$ and a non-zero constant $M$ such that $f_X \\leq M\\cdot g$. A sample $X = x$ generated from $g$ is accepted with probability $\\frac{f_X}{M g}$. One can compute that the expected number of times it takes to draw and accept a sample $X=x$ is precisely $M$. This means that roughly $(M-1)/M$ of samples drawn from $g$ will be rejected. \n",
+    "\n",
+    "Typically, if $n$ number of samples of values of $X$ are desired, one would repeated draw from $g$ until $n$ samples have been accepted. Otherwise, if one draws a $n$ samples from $g$, the lower number of accepted samples will lead to greater variance in your Monte Carlo estimates.\n",
     "\n",
     "\n",
     "### III. Importance Sampling\n",
     "\n",
+    "Importance sampling is not actually a method for producing samples from $f_X$. Rather, it is a way to directly estimate $\\mathbb{E}[Y]$, we will denote this by $\\mathbb{E}_f[Y]$ indicating that the expectation is taken with respect to $f_X$. The intuition here, again, is to choose a proposal distribution $g$ from which it is easy to draw samples. Then rather than taking the expectation of $Y = h[X]$ with respect to $f_X$, which is hard to estimate, we take the expectation of a new variable with respect to $g$, which is hopefully easy to estimate:\n",
+    "$$\n",
+    "\\mathbb{E}_f[h[X]]  = \\int_\\mathbb{R} \\frac{h(x)f_X(x)}{g(x)} g(x) dx = \\mathbb{E}_g\\left[\\frac{h(X)f_X(X)}{g(X)}\\right] = \\mathbb{E}_g\\left[w(X)h(X)\\right], \\quad w(X) = \\frac{f_X(X)}{g(X)}\n",
+    "$$\n",
+    "We see that for the above equations to be valid, we need to require that $g>0$ whenever $fh>0$.\n",
+    "\n",
+    "So then, we can estimate $\\mathbb{E}_f[h[X]]$ by sampling from $g$ as follows:\n",
+    "$$\n",
+    "\\mathbb{E}_f[h[X]] = \\mathbb{E}_g\\left[w(X)h(X)\\right] \\approx \\frac{1}{n}\\sum_{i=1}^n w(X^{(i)})h(X^{(i)}), \\quad X^{(i)} \\sim g\n",
+    "$$\n",
+    "\n",
+    "Let's set $\\bar{Y}_n^g = \\frac{1}{n}\\sum_{i=1}^n w(X^{(i)})h(X^{(i)})$. With some work, we can show that $\\bar{Y}_n^g$ is an unbiased estimator of $\\mathbb{E}[Y]$, that is, $\\mathbb{E}[\\bar{Y}_n^g] = \\mathbb{E}[Y]$. Furthermore, we can explicitly compute the variance of this method of estimation as:\n",
+    "$$\n",
+    "\\mathrm{Var}_g[\\bar{Y}_n^g] = \\frac{\\sigma_g^2}{n}, \\quad \\sigma^2_g = \\int_\\mathbb{R} \\frac{(h(x)f_X(x))^2}{g(x)}dx - \\mathbb{E}[Y]^2\n",
+    "$$\n",
+    "The point of writing down an analytical expression for the variance of $\\bar{Y}_n^g$ is to help us find some guidelines on how to choose $g$ to minimize the variance. In particular, we see that when $g = \\frac{h\\cdot f_X}{\\mathbb{E}[Y]}$, then $\\mathrm{Var}_g[\\bar{Y}_n^g]$ is minimized (in particular, it becomes zero). \n",
+    "\n",
+    "So why don't we always just set the proposal distribution for importance sampling to be $g = \\frac{h\\cdot f_X}{\\mathbb{E}[Y]}$? Well, recall that the main point of using importance sampling is that $f_X$ is difficult to sample from, thus, choosing $g$ to be a function of $f_X$ will very likely yield a distribution that is equally (if not more) unwieldy! Instead, we settle for the rule of thumb that we ought to choose a $g$ that is, as much as possible, proportional to $h\\cdot f_X$, $g \\propto h\\cdot f_X$.\n",
+    "\n",
+    "**BE CAREFUL:** With an appropriate choice of $g$ importance sampling can yield estimates with ***lower variance***. As such, this technique is often introduced in the context of variance reduction. However, as you can see from above, a poor choice of $g$ can lead to a blow up in variance. In fact, since you have the expression for the variance of regular Monte Carlo estimation of $\\mathbb{E}[Y]$, it is a good exercise to derive conditions (or come up with examples) where importance sampling will lead to an ***increase in variance***.\n",
+    "\n",
+    "\n",
+    "### IV. Stratified Sampling\n",
+    "The intuition for stratified sampling is that while computing the integral for $\\mathbb{E}[Y]$ maybe difficult, we might be able to break up the domain of $Y$ in to strata so that the integral becomes simplified (or has other desirable properties) on each piece of the strata.\n",
+    "\n",
+    "For example, suppose the domain of $Y$ is all of the real numbers $\\mathbb{R}$. Let's break up $\\mathbb{R}$ into $m$ number of strata, each of which is an interval:\n",
+    "$$\n",
+    "(-\\infty, r_1], (r_1, r_2], \\ldots, (r_{m-2}, r_{m-1}], (r_{m-1}, \\infty)\n",
+    "$$\n",
+    "Then we can rewrite the integral for $\\mathbb{E}[Y]$:\n",
+    "$$\n",
+    "\\mathbb{E}[Y] = \\mathbb{E}[h(X)] = \\sum_{j=1}^m \\int_{[r_{j-1}, r_j]} h(x) f_X(x)dx.\n",
+    "$$\n",
+    "Unfortunately, it is not clear how to estimate each subintegral, $\\int_{[r_{j-1}, r_j]} h(x) f_X(x)dx$, since $f_X$ is not a proper pdf over $[r_{j-1}, r_j]$. What we need to do is to normalize $f_X$ over each interval $[r_{j-1}, r_j]$. That is,\n",
+    "$$\n",
+    "\\mathbb{E}[Y] = \\mathbb{E}[h(X)] = \\sum_{j=1}^m w_j \\int_{[r_{j-1}, r_j]} \\frac{1}{w_j} h(x) f_X(x)\\mathbb{I}(x\\in [r_{j-1}, r_j]) dx,\n",
+    "$$\n",
+    "where $w_j = \\int_{[r_{j-1}, r_j]} f_X(x) dx$ is the area under the curve of $f_X$ over $[r_{j-1}, r_j]$ and $f_X(x)\\mathbb{I}(x\\in [r_{j-1}, r_j])$ is just $f_X$ redefined to be zero outside of $[r_{j-1}, r_j]$.\n",
+    "\n",
+    "Now, we can estimate $\\mathbb{E}[Y]$ as follows:\n",
+    "$$\n",
+    "\\mathbb{E}[Y] = \\mathbb{E}[h(X)] \\approx \\sum_{j=1}^m w_j\\left[\\frac{1}{n_j}\\sum_{i=1}^{n_j}h(X^{ij})\\right], \\quad X^{ij} \\sim \\frac{1}{w_j} f_X(x)\\mathbb{I}(x\\in [r_{j-1}, r_j])\n",
+    "$$\n",
+    "***Plainly put:*** \n",
+    "1. we break up the domain in to $m$ number of strata\n",
+    "2. we sample $n_j$ number of points from the $j$-th strata. Making sure that $n = \\sum_{j=1}^m n_j$.\n",
+    "3. we take plug in these $n_j$ number of points into $h$ and take the average\n",
+    "4. we take a weighted average of the averages to estimate $\\mathbb{E}[Y]= \\mathbb{E}[h(X)]$.\n",
+    "\n",
+    "Let's define $\\bar{Y}^{SS}_n = \\sum_{j=1}^m w_j\\left[\\frac{1}{n_j}\\sum_{i=1}^{n_j}h(X^{ij})\\right]$. We can again show that $\\bar{Y}^{SS}_n$ is an unbiased estimator of $\\mathbb{E}[Y]$. We can also derive the variance of our estimator:\n",
+    "$$\n",
+    "\\mathrm{Var}[\\bar{Y}^{SS}_n] = \\sum_{j=1}^m w_j^2 \\frac{\\sigma_j^2}{n_j},\n",
+    "$$\n",
+    "where $\\sigma^2_j$ is roughly the variance of $Y$ restricted to the interval $[r_{j-1}, r_j]$. \n",
+    "\n",
+    "The explicit formulation of the variance of $\\bar{Y}^{SS}_n$ allow us to choose the stratification (splitting of the domain) and the sampling scheme (how many points to take from each strata) that will minimize variance. In particular, we see that if $\\sigma_j$ is zero for all strata, then the variance or our stratified sampling method will be zero.\n",
     "\n",
     "---"
    ]
@@ -704,7 +770,7 @@
     "\n",
     "Since the graph of $f_X$ is a set of two triangular peaks, it's natural for us to try and divide the domain of $f_X$ into two pieces $(-\\infty, 5]$ and $[5, \\infty)$. \n",
     "\n",
-    "Note that $\\mathrm{P}(x\\in (-\\infty, 5]) = \\frac{1}{3}$ and that $\\mathrm{P}(x\\in [5, \\infty]) = \\frac{2}{3}$.\n",
+    "Note that $\\int_{(-\\infty, 5]} f_X(x) dx = \\frac{1}{3}$ and that $\\int_{[5, \\infty)} f_X(x) dx = \\frac{2}{3}$.\n",
     "\n",
     "Thus, we can write:\n",
     "$$\n",
@@ -784,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -793,8 +859,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "stratified mean: 0.0588389952105\n",
-      "stratified std: 0.00106652627624\n"
+      "stratified mean: 0.0588241253679\n",
+      "stratified std: 0.00107226818499\n"
      ]
     }
    ],
