correcting typo in equation, Problem 2

--- a/HW3_long/Long_HW_1.ipynb
+++ b/HW3_long/Long_HW_1.ipynb
@@ -51,7 +51,7 @@
     "## Problem 2. The Multilayer Perceptron (with one hidden layer)\n",
     "The multilayer perceptron can be understood as a logistic regression classifier in which the input is first transformed using a learnt non-linear transformation. The non-linear transformation is usually chosen to be either the logistic function or the $\\tanh$ function, and its purpose is to project the data into a space where it becomes linealry separable The output of this so-called hidden layer is then passed to the logistic regression graph that we have constructed in the first problem. In matrix notation:\n",
     "\n",
-    "$$G(b^{(2)}+W^{(2)}(s(b^{(1)}W^{(1)}x)))$$\n",
+    "$$G(b^{(2)}+W^{(2)}(s(b^{(1)}+W^{(1)}x)))$$\n",
     "\n",
     "with bias vectors $b^{(1)}$, $b^{(2)}$; weight matrices $W^{(1)}$, $W^{(2)}$ and activation functions $G$ and $s$. Here is a diagram:\n",
     "\n",
@@ -93,9 +93,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:py35]",
+   "display_name": "Python [py36]",
    "language": "python",
-   "name": "conda-env-py35-py"
+   "name": "Python [py36]"
   },
   "language_info": {
    "codemirror_mode": {
@@ -107,7 +107,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
