--- a/HW5/AM207_HW5.ipynb
+++ b/HW5/AM207_HW5.ipynb
@@ -37,20 +37,28 @@
     "$$\n",
     "A clever way to apply our Monte Carlo techniques would be to split the integrand as $h(x)f_X(x)$, and then approximate the integral as we have done in Homework #2:\n",
     "$$\n",
-    "I = \\int_{0}^{\\infty} h(x)\\,f_X(x) dx  \\approx \\frac{1}{N} \\sum\\limits_{i=1}^{N} h(x_i)$$ \n",
-    "where the values of $x$'s are now drawn from $g(x)$. \n",
+    "I = \\int_{0}^{\\infty} h(x)\\,f_X(x) dx  \\approx \\frac{1}{N} \\sum\\limits_{i=1}^{N} h(X_i)$$ \n",
+    "where the $X_i$'s are drawn from $f_X(x)$. \n",
     "\n",
-    "Alternatively we can approximate the integral as \n",
-    "$\\hat{I} \\approx \\frac{1}{N} \\sum\\limits_{i=1}^{N} g(X_i) $\n",
-    "where the $X_i$'s are independently drawn from $f_X$.\n",
+    "We denote the approximation of the integral\n",
+    "$$\\hat{I} = \\frac{1}{N} \\sum\\limits_{i=1}^{N} h(X_i), \\quad X_i \\sim f_X.$$\n",
+    "\n",
     "\n",
     "### Part A:\n",
-    "- In order for our Monte Carlo approximation of $I$ to be as accurate as possible, name a few general properties that  $f_X(x)$ and $h(x)$ should satisfy.\n",
     "\n",
-    "- Rewrite your integrand as a product $h(x)f_X(x)$. Explain how you chose the functions $h$ and $f_X$ (specifically, you should address how your choices satisfy the properties you outlined in the first bullet).\n",
+    "Rewrite your integrand as a product of two functions, $h(x)g(x)$. Explain your choice of $h(x)$ is appropriate. Explain why your choice of $g(x)$ is appropriate for creating a pdf $f_X(x)$.\n",
+    "\n",
+    "(**Hint:** think about what you would have to do do turn $g(x)$ into a good pdf and $h(x)$ into a function evaluated at multiple samples from this pdf. Think about how to choose these two functions to make your Monte Carlo approximation of $I$ to be as accurate as possible.)\n",
+    "\n",
     "\n",
     "### Part B:\n",
-    "- Use $\\frac{1}{2+(x-4)^2}$ as your $f_X(x)$ (remember that you need to normalize your choice of $f_X$ in order for it to represent a pdf). Implement a Metropolis-Hastings algorithm to sample from $f_X$. Run the simulation 50 times for 150,000 points. Report the value of the integral $\\hat{I}$ and the Var(${\\hat{I}}$)."
+    "\n",
+    "- Use $\\frac{1}{2+(x-4)^2}$ to create your pdf $f_X(x)$. Implement a Metropolis-Hastings algorithm to sample from $f_X$. Run the simulation 50 times for 150,000 points. Report the value of the integral $\\hat{I}$ and the Var(${\\hat{I}}$).\n",
+    "\n",
+    "\n",
+    "- Use $xe^{-x}$ to create your pdf $f_X(x)$. Implement a Metropolis-Hastings algorithm to sample from $f_X$. Run the simulation 50 times for 150,000 points. Report the value of the integral $\\hat{I}$ and the Var(${\\hat{I}}$).\n",
+    "\n",
+    "- Compare the variance of your two estimates, which choice of $f_X(x)$ is better?"
    ]
   },
   {
@@ -79,7 +87,7 @@
     "\n",
     "We'd represent your answer by the vector $\\theta = (2,3,5,4,1)$.\n",
     "\n",
-    "Now, we have a way of quantifiness how wrong your answer can be. We define the Hamming distance between two top five rankings, $\\theta, \\omega$, as follows:\n",
+    "Now, we have a way of quantify how wrong your answer can be. We define the Hamming distance between two top five rankings, $\\theta, \\omega$, as follows:\n",
     "$$d(\\theta, \\omega) = \\sum_{i=1}^5 \\mathbb{I}_{\\theta_i\\neq \\omega_i},$$ \n",
     "where $\\mathbb{I}_{\\theta_i\\neq \\omega_i}$ is the indicator function that returns 1 if $\\theta_i\\neq \\omega_i$ and 0 otherwise.\n",
     "\n",
