--- a/HW5/AM207_HW5.ipynb
+++ b/HW5/AM207_HW5.ipynb
@@ -46,7 +46,7 @@
     "\n",
     "### Part A:\n",
     "\n",
-    "Rewrite your integrand as a product of two functions, $h(x)g(x)$. Explain your choice of $h(x)$ is appropriate. Explain why your choice of $g(x)$ is appropriate for creating a pdf $f_X(x)$.\n",
+    "Rewrite your integrand as a product of two functions, $h(x)g(x)$, which can then be expressed as $h(x)f_X(x)$. Explain your choice of $h(x)$ is appropriate. Explain why your choice of $g(x)$ is appropriate for creating a pdf $f_X(x)$.\n",
     "\n",
     "(**Hint:** think about what you would have to do do turn $g(x)$ into a good pdf and $h(x)$ into a function evaluated at multiple samples from this pdf. Think about how to choose these two functions to make your Monte Carlo approximation of $I$ to be as accurate as possible.)\n",
     "\n",
