--- a/HW5/AM207_HW5.ipynb
+++ b/HW5/AM207_HW5.ipynb
@@ -46,19 +46,19 @@
     "\n",
     "### Part A:\n",
     "\n",
-    "Rewrite your integrand as a product of two functions, $h(x)g(x)$, which can then be expressed as $h(x)f_X(x)$. Explain your choice of $h(x)$ is appropriate. Explain why your choice of $g(x)$ is appropriate for creating a pdf $f_X(x)$.\n",
+    "Rewrite your integrand as a product of two functions, $h(x)g(x)$, which can then be expressed as $h(x)f_X(x)$, where $f_X$ is a pdf (you may use one of the splits we propose in Part B or create your own). Explain your choice of $h$ is appropriate. Explain why your choice of $g$ is appropriate for creating a pdf $f_X$.\n",
     "\n",
-    "(**Hint:** think about what you would have to do do turn $g(x)$ into a good pdf and $h(x)$ into a function evaluated at multiple samples from this pdf. Think about how to choose these two functions to make your Monte Carlo approximation of $I$ to be as accurate as possible.)\n",
+    "(**Hint:** think about what you would have to do do turn $g$ into a good pdf and $h$ into a function evaluated at multiple samples from this pdf. Think about how to choose these two functions to make your Monte Carlo approximation of $I$ to be as accurate as possible.)\n",
     "\n",
     "\n",
     "### Part B:\n",
     "\n",
-    "- Use $\\frac{1}{2+(x-4)^2}$ to create your pdf $f_X(x)$. Implement a Metropolis-Hastings algorithm to sample from $f_X$. Run the simulation 50 times for 150,000 points. Report the value of the integral $\\hat{I}$ and the Var(${\\hat{I}}$).\n",
+    "- Use $\\frac{1}{2+(x-4)^2}$ to create your pdf $f_X$. Implement a Metropolis-Hastings algorithm to sample from $f_X$. Run the simulation 50 times for 150,000 points. Report the value of the integral $\\hat{I}$ and the Var(${\\hat{I}}$).\n",
     "\n",
     "\n",
-    "- Use $xe^{-x}$ to create your pdf $f_X(x)$. Implement a Metropolis-Hastings algorithm to sample from $f_X$. Run the simulation 50 times for 150,000 points. Report the value of the integral $\\hat{I}$ and the Var(${\\hat{I}}$).\n",
+    "- Use $xe^{-x}$ to create your pdf $f_X$. Implement a Metropolis-Hastings algorithm to sample from $f_X$. Run the simulation 50 times for 150,000 points. Report the value of the integral $\\hat{I}$ and the Var(${\\hat{I}}$).\n",
     "\n",
-    "- Compare the variance of your two estimates, which choice of $f_X(x)$ is better?"
+    "- Compare the variance of your two estimates, which choice of $f_X$ is better?"
    ]
   },
   {
