--- a/HW5/AM207_HW5.ipynb
+++ b/HW5/AM207_HW5.ipynb
@@ -53,12 +53,12 @@
     "\n",
     "### Part B:\n",
     "\n",
-    "- Use $\\frac{1}{2+(x-4)^2}$ to create your pdf $f_X$. Implement a Metropolis-Hastings algorithm to sample from $f_X$. Run the simulation 50 times for 150,000 points. Report the value of the integral $\\hat{I}$ and the Var(${\\hat{I}}$).\n",
+    "- Use $\\frac{1}{2+(x-4)^2}$ to create your pdf $f_X$. Implement a Metropolis-Hastings algorithm to sample from $f_X$. Run the simulation 50 times for 150,000 points. Report the value of $\\hat{I}$ and that of Var(${\\hat{I}}$).\n",
     "\n",
     "\n",
-    "- Use $xe^{-x}$ to create your pdf $f_X$. Implement a Metropolis-Hastings algorithm to sample from $f_X$. Run the simulation 50 times for 150,000 points. Report the value of the integral $\\hat{I}$ and the Var(${\\hat{I}}$).\n",
+    "- Use $xe^{-x}$ to create your pdf $f_X$. Implement a Metropolis-Hastings algorithm to sample from $f_X$. Run the simulation 50 times for 150,000 points. Report the value of $\\hat{I}$ and that of Var(${\\hat{I}}$).\n",
     "\n",
-    "- Compare the variance of your two estimates, which choice of $f_X$ is better?"
+    "- Compare the variance of your two estimates. Which choice of $f_X$ is better? Explain why."
    ]
   },
   {
