--- a/HW6/AM207_HW6.ipynb
+++ b/HW6/AM207_HW6.ipynb
@@ -109,9 +109,12 @@
     "$$\n",
     "where $n$ is the total number of trials, $\\theta_i$ is the probability of event $i$ and $\\sum_i \\theta_i = 1$, and $x_i$ is count of outcome $i$ and $\\sum_i x_i = n$. \n",
     "\n",
+    "  **Note:** The data you will need in order to define the likelihood function should be read off the image files included in the dataset.\n",
+    "  \n",
+    "\n",
     "- Sample 1,000 values of $\\theta$ from the *posterior distribution*.\n",
     " \n",
-    "- Sample 1,000 values of $\\theta$ from the *posterior predictive distribution*.\n",
+    "- Sample 1,000 values of $x$ from the *posterior predictive distribution*.\n",
     "\n",
     "\n",
     "### Part B: Ranking\n",
@@ -129,6 +132,15 @@
     "\n",
     "  (**Note:** we're not looking for \"the correct answer\" here, any sound decision based on a statistically correct interpretation of your model will be fine)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
